# blaise-nifi-notify

./: Makefile  README.md  main.py  pyproject.toml
models/: message.py
tests/: test_main.py
tests/models/: test_message.py
tests/test_models/: test_config.py
