[tool.poetry]
name = "blaise_publish_bucket_metadata"
version = "0.1.0"
description = ""
authors = ["Sam Bryant <sam.bryant@armakuni.com>"]

[tool.poetry.dependencies]
python = "^3.13"
blaise-dds = {git = "https://github.com/ONSdigital/blaise-data-delivery-status-client.git", rev = "v1"}
google-cloud-pubsub = "2.14.0"
grpcio = "^1.62.2"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
isort = "^5.8.0"
flake8 = "^6.0.0"
pytest = "^7.4"
mypy = "^1.9"
flake8-cognitive-complexity = "^0.1.0"
pytest-flakefinder = "^1.0.0"
pytest-lazy-fixture = "^0.6.3"
pytest-cov = "^2.11.1"

[tool.isort]
multi_line_output = "3"
include_trailing_comma = "True"
line_length = "88"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
