[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
pythonpath = "."

[tool.poetry.dependencies]
google-oauth = "1.0.0"
python = "^3.13"
blaise-dds = {git = "https://github.com/ONSdigital/blaise-data-delivery-status-client.git", branch = "py313"}
google-cloud-pubsub = "2.14.0"
grpcio = "^1.74.0"
certifi = "^2025.8.3"
cffi = "^1.17.1"
charset-normalizer = "^3.4.3"
cryptography = "^45.0.6"
googleapis-common-protos = "^1.70.0"
grpc-google-iam-v1 = "^0.14.2"
idna = "^3.10"
proto-plus = "^1.26.1"
pyasn1 = "^0.6.1"
pyasn1-modules = "^0.4.2"
pycparser = "^2.22"
pyopenssl = "^25.1.0"
requests = "^2.32.5"
rsa = "^4.9.1"
setuptools = "^80.9.0"
six = "^1.17.0"
urllib3 = "^2.5.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
pytest = "<8.0.0"
mypy = "^1.17.1"
flake8-cognitive-complexity = "^0.1.0"
pytest-lazy-fixture = "^0.6.3"
pytest-cov = "^6.2.1"
click = "^8.2.1"
cognitive-complexity = "^1.3.0"
coverage = "^7.10.4"
iniconfig = "^2.1.0"
mccabe = "^0.7.0"
mypy-extensions = "^1.1.0"
packaging = "^25.0"
pathspec = "^0.12.1"
platformdirs = "^4.3.8"
pluggy = "^1.6.0"
pycodestyle = "^2.14.0"
pyflakes = "^3.4.0"
setuptools = "^80.9.0"
toml = "^0.10.2"
typing-extensions = "^4.14.1"

[tool.isort]
multi_line_output = "3"
include_trailing_comma = "True"
line_length = "88"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
