[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
pythonpath = "."

[tool.poetry.dependencies]
python = "^3.13"
blaise-dds = {git = "https://github.com/ONSdigital/blaise-data-delivery-status-client.git", tag = "v1.0.1"}
google-cloud-pubsub = "2.14.0"
googleapis-common-protos = "^1.70.0"
grpc-google-iam-v1 = "^0.14.2"
google-auth = "^2.40.3"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
pytest = "<8.0.0"
mypy = "^1.17.1"
flake8-cognitive-complexity = "^0.1.0"
pytest-lazy-fixture = "^0.6.3"
pytest-cov = "^6.2.1"
click = "^8.2.1"
cognitive-complexity = "^1.3.0"
coverage = "^7.10.4"
iniconfig = "^2.1.0"
mccabe = "^0.7.0"
mypy-extensions = "^1.1.0"
packaging = "^25.0"
pathspec = "^0.12.1"
platformdirs = "^4.3.8"
pluggy = "^1.6.0"
pycodestyle = "^2.14.0"
pyflakes = "^3.4.0"
toml = "^0.10.2"
typing-extensions = "^4.14.1"
deptry = "^0.23.1"

[tool.isort]
multi_line_output = "3"
include_trailing_comma = "True"
line_length = "88"

[tool.mypy]
python_version = "3.13"
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
